# constitutional-classifier-pp

./: .gitignore  README.md  pyproject.toml
constitutional_classifier_pp/: __init__.py
constitutional_classifier_pp/config/: __init__.py  base.py
constitutional_classifier_pp/hooks/: __init__.py  activation_collector.py
constitutional_classifier_pp/inference/: __init__.py  pipeline.py
constitutional_classifier_pp/models/: __init__.py  classifier.py  ensemble.py  probe.py
constitutional_classifier_pp/scripts/: __init__.py  classify.py  train_classifier.py  train_probe.py
constitutional_classifier_pp/tests/: __init__.py  test_ensemble.py  test_integration.py  test_probe.py
constitutional_classifier_pp/training/: __init__.py  classifier_trainer.py  data.py  probe_trainer.py
