[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constitutional-classifier-pp"
version = "0.1.0"
description = "Two-stage jailbreak defense system for LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vincent", email = "vincent@example.com"}
]
keywords = [
    "llm",
    "safety",
    "classifier",
    "jailbreak",
    "defense",
    "transformers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
training = [
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "constitutional-classifier-pp[training,dev]",
]

[project.urls]
Homepage = "https://github.com/bigsnarfdude/constitutional-classifier-pp"
Documentation = "https://github.com/bigsnarfdude/constitutional-classifier-pp#readme"
Repository = "https://github.com/bigsnarfdude/constitutional-classifier-pp"
Issues = "https://github.com/bigsnarfdude/constitutional-classifier-pp/issues"

[project.scripts]
train-probe = "constitutional_classifier_pp.scripts.train_probe:main"
train-classifier = "constitutional_classifier_pp.scripts.train_classifier:main"
classify = "constitutional_classifier_pp.scripts.classify:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["constitutional_classifier_pp*"]

[tool.pytest.ini_options]
testpaths = ["constitutional_classifier_pp/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
